# zsbc

./: .gitignore  ChangeLog  FAQ  Makefile.am  Makefile.in  README  TODO  config.h.in  configure  configure.ac  extracfg.h  makefile.mingw  makefile.vc  mod.b
doc/: Makefile.am  Makefile.in  zsbc.1  zsbc.html  zsbc.txt
lib/: Makefile.in
prof/: copyonupdate.b  copyonupdate.sh  lotofvar.pl  p.b  q.b  timebig.cmd  timebig.sh  valgrind1.sh  valgrind2.sh  vg1.b  vg2.b
sandbox/: argarray.b  interrupt.b  loop.b  mod.b  secp256r1.b
src/: Makefile.am  Makefile.in  array.c  array.h  common.h  expr.c  expr.h  lexer.c  lexer.l  main.c  numwrap.c  numwrap.h  parser.c  parser.h  parser.y  prepb.sh  prept.sh  program.c  program.h  vars.c  vars.h
src/bc/: libmath.c  libmath.h  mkreslib.sh
src/man/: bc-prefix.txt  bc.1  bcman.c  bcman.txt  zsbcman.c
tests/: bc-zsbc.sh  gen-bc-tests.sh  gen.sh  timetest.sh
tests/config/: unix.exp
tests/zsbc.test/: 01gmp-01.exp  01gmp-02.exp  01gmp-03.exp  01gmp-04.exp  01gmp-05.exp  01gmp-10.exp  01gmp-20.exp  01gmp-21.exp  01gmp-30.b  01gmp-30.exp  01gmp-31.b  01gmp-31.exp  01gmp-40.exp  01gmp-41.b  01gmp-41.exp  01gmp-42.exp  01gmp-43.b  01gmp-43.exp  01gmp-45.exp  01gmp-46.b  01gmp-46.exp  01gmp-47.exp  01gmp-48.b  01gmp-48.exp  01gmp-49.b  01gmp-49.exp  01gmp-59.exp  01gmp-60.b  01gmp-60.exp  01gmp-70.exp  01gmp-71.exp  01gmp-72.b  01gmp-72.exp  01gmp-73.b  01gmp-73.exp  01gmp-74.exp  02bc-01.exp  02bc-02.exp  02bc-03.exp  02bc-04.exp  (+45 more)
